--- a/table va form/bai tap/tao bang don gian.html
+++ b/table va form/bai tap/tao bang don gian.html
@@ -32,51 +32,55 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <h1 style="text-align: center " style="color: blue"> THỜI KHÓA BIỂU </h1>
-
-    <div style="float:left;width:50%;">lớp: t09081</div>
-    <div style="float:right;width:50%;">thời gian học:13h30 - 17h30</div>
-    <div style="float:left;width:50%;">giáo viên:khoa nv</div>
-    <div style="float:right;width:50%;">ngày học: thứ 3,5,7</div>
-    <div style="float:left;width:50%;">ngày học: phòng học:class3/lab3</div>
+</head>
+<body>
     <table border="1">
-        <tr>
-            <th colspan="3"></th>
-            <th style="background: yellow"> thứ 3</th>
-            <th style="background: yellow"> thứ 3</th>
-            <th style="background: yellow"> thứ 3</th>
-        </tr>
-        <tr>
-            <th style="background: chocolate">tuần</th>
-            <th style="background: chocolate">ngày bắt đầu</th>
-            <th style="background: chocolate">ngày kết thúc</th>
-            <th colspan="3" style="background: chocolate">môn học</th>
-        </tr>
-        <tr>
-            <td>01</td>
-            <td>01/09/2009</td>
-            <td>05/09/2009</td>
-            <td>cf-t1,l1</td>
-            <td>cf-t2,l2</td>
-            <td>cf-t3,l3</td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>08/09/2009</td>
-            <td>12/09/2009</td>
-            <td>cf-t4,l4</td>
-            <td>cf-written test</td>
-            <td>c - t1,l1</td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>...</td>
-            <td>...</td>
-            <td>...</td>
-            <td>...</td>
-            <td>...</td>
-        </tr>
+        <h1 style="color: blue">THỜI KHÓA BIỂU </h1>
+<span> lớp: t09081</span>
+<span style="margin-left: 150px" > thời gian học:13h30 - 17h30</span>
+<br>
+<span>giáo viên:khoa nv </span>
+<span style="margin-left: 140px">  ngày học: thứ 3,5,7</span>
+<br>
+<p> phòng học:class3/lab3</p>
+<tr>
+    <th colspan="3"></th>
+    <th style="background: yellow"> thứ 3</th>
+    <th style="background: yellow"> thứ 3</th>
+    <th style="background: yellow"> thứ 3</th>
+</tr>
+<tr>
+    <th style="background: chocolate">tuần</th>
+    <th style="background: chocolate">ngày bắt đầu</th>
+    <th style="background: chocolate">ngày kết thúc</th>
+    <th colspan="3" style="background: chocolate">môn học</th>
+</tr>
+<tr>
+    <td>01</td>
+    <td>01/09/2009</td>
+    <td>05/09/2009</td>
+    <td>cf-t1,l1</td>
+    <td>cf-t2,l2</td>
+    <td>cf-t3,l3</td>
+</tr>
+<tr>
+    <td>2</td>
+    <td>08/09/2009</td>
+    <td>12/09/2009</td>
+    <td>cf-t4,l4</td>
+    <td>cf-written test</td>
+    <td>c - t1,l1</td>
+</tr>
+<tr>
+    <td>3</td>
+    <td>...</td>
+    <td>...</td>
+    <td>...</td>
+    <td>...</td>
+    <td>...</td>
+</tr>
 
-    </table>
-    </body>
+</table>
+</div>
+</body>
 </html>
