--- a/bien,kieu du lieu va toan tu/baitap/doido.html
+++ b/bien,kieu du lieu va toan tu/baitap/doido.html
@@ -12,18 +12,15 @@
 <button onclick="vl()"> đổi</button> <input id="mi" type="text">
 
 <body>
-
 <script>
     function a() {
-        var a1 = document.getElementById('ab').value ;
-        document.getElementById('y').value = (a1/5 - 32) / 9;
+        var aa = document.getElementById('ab').value ;
+        document.getElementById('y').value = (aa/5 - 32) / 9;
     }
     function vl() {
         var a12 = document.getElementById('ba').value ;
         document.getElementById('mi').value = ((a12 - 32)/9)/5 ;
     }
-
-
 </script>
 </body>
 </html>
