--- a/bien,kieu du lieu va toan tu/baitap/chuvihinhtron.html
+++ b/bien,kieu du lieu va toan tu/baitap/chuvihinhtron.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 <script>
-    var bb =' chu vi hình tròn là : ';
-    var chuvi
+    var khaiBao =' chu vi hình tròn là : ';
+    var chuvi ;
     var PI = 3.14 ;
  var a =   prompt('hãy nhập ĐƯỜNG KÍNH' );
    chuvi = a*PI ;
-    document.write(bb); document.write(chuvi);
+    document.write(khaiBao); document.write(chuvi);
 
 
 
