--- a/bien,kieu du lieu va toan tu/baitap/ung dung may tinh.html
+++ b/bien,kieu du lieu va toan tu/baitap/ung dung may tinh.html
@@ -16,27 +16,27 @@
     <a>result : </a> <a id="result"></a>
 <script>
     function x() {
-        var aa = parseInt(document.getElementById('a1').value);
-        var bb = parseInt(document.getElementById('b2').value);
-        document.getElementById('result').innerHTML = (aa + bb);
+        var cong1 = parseInt(document.getElementById('a1').value);
+        var cong2 = parseInt(document.getElementById('b2').value);
+        document.getElementById('result').innerHTML = (cong1 + cong2);
     }
 
     function y() {
-        var aa = parseInt(document.getElementById('a1').value);
-        var bb = parseInt(document.getElementById('b2').value);
-        document.getElementById('result').innerText = (aa - bb);
+        var tru = parseInt(document.getElementById('a1').value);
+        var tru1 = parseInt(document.getElementById('b2').value);
+        document.getElementById('result').innerText = (tru - tru1);
     }
 
     function z() {
-        var aa = parseInt(document.getElementById('a1').value);
-        var bb = parseInt(document.getElementById('b2').value);
-        document.getElementById('result').innerText = (aa * bb);
+        var nhan = parseInt(document.getElementById('a1').value);
+        var nhan1 = parseInt(document.getElementById('b2').value);
+        document.getElementById('result').innerText = (nhan * nhan1);
     }
 
     function v() {
-        var aa = parseInt(document.getElementById('a1').value);
-        var bb = parseInt(document.getElementById('b2').value);
-        document.getElementById('result').innerText = (aa / bb);
+        var chia = parseInt(document.getElementById('a1').value);
+        var chia1 = parseInt(document.getElementById('b2').value);
+        document.getElementById('result').innerText = (chia / chia1);
     }
 </script>
 </body>
