--- a/cautrucdieukien2/baitap/luyentapcautrucidieukien01/tinhchudien.html
+++ b/cautrucdieukien2/baitap/luyentapcautrucidieukien01/tinhchudien.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 <script>
-    var dongia = parseInt(prompt("chữ điện của bạn:"));
-    if (dongia > 50 ) {
-        document.write("bạn xài đơn giá 2(2.721 vnd ):" + dongia * 2.721 +"vnd");    }
-    if (dongia < 50 )
+    var donGia = parseInt(prompt("chữ điện của bạn:"));
+    if (donGiaia > 50 ) {
+        document.write("bạn xài đơn giá 2(2.721 vnd ):" + donGia * 2.721 +"vnd");    }
+    if (donGia < 50 )
     {
-        dongia =  document.write("bạn xài đơn giá 1(1.472 vnd )" + dongia*1.472 +'vnd');
+        donGia =  document.write("bạn xài đơn giá 1(1.472 vnd )" + donGia*1.472 +'vnd');
     }
 </script>
 </body>
