--- a/cautrucdieukien2/baitap/tinhsocannangcothe.html
+++ b/cautrucdieukien2/baitap/tinhsocannangcothe.html
@@ -28,8 +28,8 @@
     </tr>
 </table>
 <script>
-    var hight = parseInt(prompt('hight'));
-    var weight = parseInt(prompt('weight'));
+    var hight = parseFloat(prompt('hight'));
+    var weight = parseFloat(prompt('weight'));
     var BMI = (weight / (hight ^ 2));
     if (BMI < 18.5) {
         var BMI = weight / (hight ^ 2);
