--- a/cau lenh dieu kien/thuc hanh/toantubangoi.html
+++ b/cau lenh dieu kien/thuc hanh/toantubangoi.html
@@ -6,12 +6,14 @@
 </head>
 <body>
 <script>
-    var a=parseInt(prompt('a'));
-    var b=parseInt(prompt('b'));
+    var a=parseInt(prompt('a:'));
+    var b=parseInt(prompt('b:'));
  var tong =(a + b) ;
     if (tong<4) {
         alert('below')}
-    else {alert('over')}
+    else if (tong>4){
+        alert('Over')
+    }
 
 </script>
 </body>
