--- a/mảng/baitap/LUYENTAPMANG1/bai3.html
+++ b/mảng/baitap/LUYENTAPMANG1/bai3.html
@@ -22,13 +22,13 @@
         if (varName [i] > max) {
             max = varName [i];
             index = i;
-            console.log(index)
         }  sum = sum + varName[i]
-        result = sum / varName.length
-    }
-    document.write('số' + max + 'vị trí' + index +'<br>');
 
-    document.write(' trung bình : ' + result);
+    }
+    result = sum / varName.length ;
+    document.write('number' + max + 'index' + index +'<br>');
+
+    document.write(' average: ' + result);
 </script>
 </body>
 </html>
