--- a/mảng/thực hành/timgiatrilonnhat.html
+++ b/mảng/thực hành/timgiatrilonnhat.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 <script>
-    var mang=[1123,34,43,12,3,1234,5555];
-    var max = mang[0];
+    var num=[1123,34,43,12,3,1234,5555];
+    var max = num[0];
    var index = 0 ;
-    for(let i=1;i<mang.length;i++) {
+    for(let i=1;i<num.length;i++) {
         if (mang[i] > max) {
           max = mang[i];
             index = i;
