--- a/cau truc lap 1/baitap/luyentapcautruc2/bai1.html
+++ b/cau truc lap 1/baitap/luyentapcautruc2/bai1.html
@@ -6,30 +6,42 @@
 </head>
 <body>
 <script>
-    var i,j,q,w,r,t;
-    for(i=1;i<=5;i++){
-        for (j=1;j<=i;j++){
-            document.write('*');}
-    document.write("<br>");
+for ( let i =1 ; i <= 5 ; i ++){
+    for ( let j =1  ; j <= i ; j++){
+        document.write('*');
     }
-  //////////////////
-    for(q=1;q<=5;q++){
-        for(w=q;w<=5;w++)
-        {
-            document.write('*');
-        }
-        document.write('<br>');
-    }
- //////////////
-    for(r=1;r<=5;r++)
+    document.write('<br>');
+}
+document.write('<br>');
+
+for (let i = 1 ; i <=5 ; i++){
+    for (let j  = 6 ;j > i ; j-- )
     {
-        for(t=5;t>=r;t++){
-            document.write('&nbsp');
-        }
-     document.write('*')
+        document.write('*')
+    }document.write('<br>')
+}
+document.write('<br>');
+
+for(let i = 1 ; i <=5 ; i ++ ){
+    for (let j = 1 ; j < i ; j ++){
+        document.write("&nbsp&nbsp")
+    }for(let j = 6 ; j > i   ; j--  ){
+        document.write('*');
     }
+    document.write('<br>') ;
+}
+document.write('<br>');
 
 
+for(let i = 1 ; i <=5 ; i++){
+    for (let j = 5 ; j > i ;j-- ){
+        document.write("&nbsp&nbsp");
+    }
+    for (  j=1 ; j<=i   ;j++  ){
+        document.write('*')
+    }
+    document.write('<br>')
+}
 
 
 
