--- a/mảng/baitap/luyentapvoimang2/bai1.html
+++ b/mảng/baitap/luyentapvoimang2/bai1.html
@@ -11,10 +11,12 @@
         [7, 0, 7, 27],
         [7, 4, 28, 14],
         [3, 10, 26, 7]];
-for (var i=0;i < a.length-1;i++){
-     a[i]
-
-
+    for (var i = 0; i < a.length; i++) {
+        document.write('row'+ i +'<br>') ;
+        for (var j = 0; j < a[i].length; j++) {
+            document.write(a[i][j] +'<br>') ;
+        }
+    }
 </script>
 </body>
 </html>
