--- a/mảng/baitap/luyentapvoimang2/bai5.html
+++ b/mảng/baitap/luyentapvoimang2/bai5.html
@@ -10,9 +10,9 @@
     var num2 = prompt('chuổi 2 ') ;
     var numb1 = num1.split('');
     var numb2 = num2.split('');
-  if (  num1.length == num2.length) {
+  if (  numb1.length == numb2.length) {
       for ( var i = 0 ; i < num1.length;i++){
-          if (num1[i]=num2[i]){
+          if (num[i]=num2[i]){
 
               alert('hai chuổi giống nhau')
           }
