--- a/function/baitap/bai3/bai4.html
+++ b/function/baitap/bai3/bai4.html
@@ -19,3 +19,30 @@
 </script>
 </body>
 </html>
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Title</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<script>-->
+<!--    var flag = false;-->
+<!--    function kiemtrasont(n) {-->
+<!--        if (n < 2) {-->
+<!--            return flag = false;-->
+<!--        } else {-->
+<!--            for (var i = 2; i < n; i++) {-->
+<!--                if (n % i == 0) {-->
+<!--                    return flag = false-->
+<!--                }-->
+<!--            }-->
+<!--            return flag = true;-->
+<!--        }-->
+<!--    }-->
+<!--    var check = parseInt(prompt("nhập vào 1 số")) ;-->
+<!--    document.write(kiemtrasont(check))-->
+<!--</script>-->
+
+<!--</body>-->
+<!--</html>-->
