--- a/function/baitap/bai1 kiểm tra số nguyên tố.html
+++ b/function/baitap/bai1 kiểm tra số nguyên tố.html
@@ -11,18 +11,18 @@
             return false;
         } else {
             for (let i = 2; i < n; i++) {
-                if (n % i == 0) {
-                    return false;
+                if (n % i == 0)  {
+                    return false ;
                 }
             }
             return true;
         }
     }
-    let number = parseInt(prompt("login"))
+    let number = parseInt(prompt("login")) ;
     if (isPrime(number)) {
-        alert(number + " là số nguyên tố ")
+        alert(number + " là số nguyên tố ") ;
     } else {
-        alert(number + " không là số nguyên tố")
+        alert(number + " không là số nguyên tố") ;
     }
 
 </script>
