--- a/function/baitap/bai1 kiểm tra số nguyên tố.html
+++ b/function/baitap/bai1 kiểm tra số nguyên tố.html
@@ -7,9 +7,10 @@
 <body>
 <script>
     function isPrime(n) {
-        if (n < 2) {
+        if (n < 2 ) {
             return false;
-        } else {
+        }
+        else {
             for (let i = 2; i < n; i++) {
                 if (n % i == 0)  {
                     return false ;
@@ -24,7 +25,6 @@
     } else {
         alert(number + " không là số nguyên tố") ;
     }
-
 </script>
 </body>
 </html>
