--- a/Class và Object/thuchanh/xây dựng lớp hình tròn.html
+++ b/Class và Object/thuchanh/xây dựng lớp hình tròn.html
@@ -6,29 +6,33 @@
 </head>
 <body>
 <script>
-    class Circle {
+    class Hinhtron {
         constructor(radius) {
-            this.radius = radius ;
-          this.area = Math.PI*radius*radius ;
+            this.radius = radius;
         }
-       getradius(){
+
+        getradius() {
             return this.radius
         }
-        getarea(){
-            return Math.PI*radius*radius ;
+
+        dienTich() {
+            return Math.PI * this.radius * this.radius;
         }
-        setradius(newradius){
+
+        setradius(newradius) {
             this.radius = newradius
         }
     }
-let circle1 = new Circle(2) ; //2
-let radius = circle1.getradius();
-let area1 = circle1.getarea() ;
-alert('radius='+radius+',' +'area='+ area1 ) ;
-    circle1.setradius(5) ;
-radius = circle1.getradius();
-area1 = circle1.getarea() ; 
-alert('radius=' + radius  + ',area=' +  area1) ;
+
+    let circle1 = new Hinhtron(2); //2
+    let dienTich1 = circle1.dienTich();
+    alert('radius=' + circle1.radius + ',' + 'area=' + dienTich1);
+
+
+    circle1.setradius(5);
+    circle1.getradius();
+    dienTich1 = circle1.dienTich();
+    alert('radius=' + circle1.radius + ',area=' + dienTich1);
 </script>
 </body>
 </html>
