--- a/function/baitap/bai4/bai4.html
+++ b/function/baitap/bai4/bai4.html
@@ -7,8 +7,8 @@
 <body>
 <script>
     function f() {
-     if ( a === number)
-         alert('true') ;
+     if (isNaN(a)){    //không phải số trả về true , số trả về false
+         alert('true') ;}
      else { alert('false')}
     }
     var a = prompt('nhập dữ liệu') ;
