--- a/cautrucdieukien2/baitap/câu lệnh switch-case.html
+++ b/cautrucdieukien2/baitap/câu lệnh switch-case.html
@@ -23,14 +23,13 @@
             case 7 :
             case 12 :
                 document.write('tháng này có 31');break;
-                case 2: document.write('tháng này có 29');break;
+                case 2: document.write('tháng này có 28 hoặc 29 ngày');break;
                 case 4  :
                 case 6  :
                 case 9  :
                 case 11 :
                     document.write('tháng này có 30');break;
         }
-
     }
 
 
