--- a/cau truc lap 1/baitap/luyentapcautruclap/thongtinnhietdo.html
+++ b/cau truc lap 1/baitap/luyentapcautruclap/thongtinnhietdo.html
@@ -15,7 +15,7 @@
         if (nhietDo > 100) {
             alert('yêu cầu giảm nhiệt độ')}
        else if ( nhietDo > 20 && nhietDo<100){
-            alert('trong nhiệt độ cho phép')
+            alert('trong nhiệt độ cho phép');break;
         }
     } while (nhietDo);
 </script>
