--- a/function/baitap/bai4/bai6.html
+++ b/function/baitap/bai4/bai6.html
@@ -6,14 +6,14 @@
 </head>
 <body>
 <script>
-    var flag = false;
+   // var flag = false;
 
     function f() {
         if (num > 0) {
             flag = true;
             alert('true ')
         }
-        if (flag == false) {
+        if (flag = false) {
             alert('false ');
         }
     }
