--- a/bien,kieu du lieu va toan tu/baitap/bien,dulieutoantu 1.html
+++ b/bien,kieu du lieu va toan tu/baitap/bien,dulieutoantu 1.html
@@ -28,17 +28,17 @@
     </tr>
 <script>
     function dt() {
-        var a1 = document.getElementById('diem1').value;
-        var a2 = document.getElementById('diem2').value;
-        var a3 = document.getElementById('diem3').value;
+        var diem1 = document.getElementById('diem1').value;
+        var diem2 = document.getElementById('diem2').value;
+        var diem3 = document.getElementById('diem3').value;
 
-        document.getElementById('dt1').value = a1*1 + a2*1 + a3*1;
+        document.getElementById('dt1').value = diem1*1 + diem2*1 + diem3*1;
     }
     function dtb(){
-        var a1 = document.getElementById('diem1').value;
-        var a2 = document.getElementById('diem2').value;
-        var a3 = document.getElementById('diem3').value;
-        document.getElementById('cc').value=( a1*1 + a2*1 + a3*1 ) /3;
+        var diem1 = document.getElementById('diem1').value;
+        var diem2 = document.getElementById('diem2').value;
+        var diem3 = document.getElementById('diem3').value;
+        document.getElementById('cc').value=( diem1*1 + diem2*1 + diem3*1 ) /3;
     }
     
 </script>
