--- a/bien,kieu du lieu va toan tu/baitap/chuvihinhtron.html
+++ b/bien,kieu du lieu va toan tu/baitap/chuvihinhtron.html
@@ -9,9 +9,9 @@
     var khaiBao =' chu vi hình tròn là : ';
     var chuvi ;
     var PI = 3.14 ;
- var a =   prompt('hãy nhập ĐƯỜNG KÍNH' );
-   chuvi = a*PI ;
-    document.write(khaiBao); document.write(chuvi);
+ var num =   prompt('hãy nhập ĐƯỜNG KÍNH' );
+   chuvi = num*PI ;
+    document.write(khaiBao+chuvi);
 
 
 
