--- a/cautrucdieukien2/baitap/câu lệnh switch-case.html
+++ b/cautrucdieukien2/baitap/câu lệnh switch-case.html
@@ -8,13 +8,13 @@
 <tr>
     <td><input id="abc" type="text"></td>
     <td>
-        <button onclick="a()">Tính số ngày</button>
+        <button onclick="result()">Tính số ngày</button>
     </td>
     <p></p>
 </tr>
 </body>
 <script>
-    function a() {
+    function result() {
         var number = parseInt(document.getElementById('abc').value);
         switch (number) {
             case 1 :
