--- a/cau truc lap 1/baitap/luyentapcautruclap/bai7.html
+++ b/cau truc lap 1/baitap/luyentapcautruclap/bai7.html
@@ -25,15 +25,15 @@
     var num = 1;
     var i = 1;
     while (i <= 100) {
-        if (num % 3 == 0) {
-            document.write('fizz' + '<br>');
-        }
-        else if (num % 5 == 0) {
-            document.write('buzz' + '<br>');
-        } else if (num % 3 == 0 && num % 5 == 0) {
+        if (num % 3 == 0 && num % 5 == 0) {
             document.write('fizzBuzz' + '<br>');
+        } else if (num % 3 == 0) {
+            document.write('fizz' + '<br>');
+        } else if (num % 5 == 0 ){
+            document.write('Buzz' + '<br>');
         } else {
-            document.write(i + '<br>');}
+            document.write(i + '<br>');
+        }
         num++;
         i++;
     }
