--- a/cau lenh dieu kien/thuc hanh/toantubangoi.html
+++ b/cau lenh dieu kien/thuc hanh/toantubangoi.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 <script>
-    var a=parseInt(prompt('a:'));
-    var b=parseInt(prompt('b:'));
- var tong =(a + b) ;
+    var num1=parseInt(prompt('a:'));
+    var num2=parseInt(prompt('b:'));
+ var tong =(num1 + num2) ;
     if (tong<4) {
         alert('below')}
-    else if (tong>4){
+    else  {
         alert('Over')
     }
 
