--- a/CaseStudy1/mangvaloop/bai2.html
+++ b/CaseStudy1/mangvaloop/bai2.html
@@ -6,48 +6,26 @@
 </head>
 <body>
 <SCRIPT>
-    var a =[7,2,5,3,5,3] ;
-    var  b =[7,2,5,4,6,3,5,3] ;
-    var ab = [] ;
-    for (var i = 0 ; i < b.length;i++){
-
-    document.write(ab)
-
-
-    // for ( var i = 0 ; i < a.length;i++){
-    //     for (var j = 0 ; j < a.length;j ++ ){
+    // var a =[7,2,5,3,5,3] ;
+    // var  b =[7,2,5,4,6,3,5,3] ;
+    // var ab = [] ;
+    // for (var i = 0 ; i < b.length;i++){
     //
-    //
-    //
-    //     }
-    // }
     // document.write(ab)
-        // let number1 = parseInt(prompt("Nhập vào số phần tử bạn muốn tạo mảngA"));
-        // let arrayA =[];
-        // for (let i = 0; i < number1; i++) {
-        //     arrayA [i] = prompt("Nhập giá trị phần tử thứ " + i);
-        // }
-        // document.write("Mảng A là " + arrayA);
-        //
-        // let number2 = parseInt(prompt(" Nhập vào số phần tử bạn muốn tạo mảng B"));
-        // let arrayB = [];
-        // for (let j = 0; j < number2; j++) {
-        //     arrayB [j] = prompt("Nhập giá trị phần tử thứ " + j);
-        // }
-        // document.write(" Mảng B là " + arrayB);
-        let a =[7,2,5,3,5,3];
-        let b = [7,1,5,4,6,3,7,3];
-        let c = [];
+
+        var a =[7,2,5,3,5,3];
+        var b = [7,1,5,4,6,3,7,3];
+        var c = [];
         for (let i = 0; i < b.length; i++) {
-            let check = false;
+            var flag = false;
             for ( let j = 0; j < a.length; j++){
                 if(b[i] == a[j]){
-                    check = true;
+                    flag = true;
                     break;
                 }
 
             }
-            if (!check) {
+            if (!flag) {
                 c.push(b[i]);
             }
 
