--- a/cau lenh dieu kien/thuc hanh/tuantubangoibai2.html
+++ b/cau lenh dieu kien/thuc hanh/tuantubangoibai2.html
@@ -6,21 +6,17 @@
 </head>
 <body>
 <script>
- let message ;
- message = prompt('login');
- if (message =='Employee'){
-     alert('hello') ;
- } else
-     if (message == 'Director'){
-         alert('Greetings')
-     }else
-         if (message == '')
-         {
-             alert('no login');
-         }
-         else {
-             alert('');
-         }
+    let message;
+    message = prompt('login');
+    if (message == 'Employee') {
+        alert('hello');
+    } else if (message == 'Director') {
+        alert('Greetings')
+    } else if (message == '') {
+        alert('no login');
+    } else {
+        alert('bạn nhập sai');
+    }
 </script>
 </body>
 </html>
