--- a/CaseStudy1/bai2ifvaswitch.html
+++ b/CaseStudy1/bai2ifvaswitch.html
@@ -8,8 +8,6 @@
 <script>
     var num = Number;
     var chu = prompt('nhập kí tự ');
-        isN
-    else{
     switch (chu ) {
         case 'o' :
         case 'u' :
@@ -24,10 +22,10 @@
             alert('ký tự nguyên âm ');
             break;
         }
-        default : {
-            alert('phụ âm ')
-        }
     }
+        // default : {
+        //     alert('phụ âm ')
+
 
 
     // Các ký tự nguyên âm bao gồm: 'o','u', 'i', 'a', 'e' hoặc 'O', 'U', 'I', 'A', 'E
