--- a/Class và Object/baitap/phone.html
+++ b/Class và Object/baitap/phone.html
@@ -23,7 +23,7 @@
             this.pin--;
         }
         sacpin(){
-            while (this.pin<=100)
+            while (this.pin++)
             this.pin = this.pin+0.01 ;
         }
         soanTinnhan(){
