--- a/Class và Object/baitap/catvarat.html
+++ b/Class và Object/baitap/catvarat.html
@@ -32,7 +32,7 @@
 
         catchRat(rat) {
             if (this.speed > rat.speed) {
-                alert('catch yu bitch')
+                alert('catch yu bitch') ;
                 return true ;
             } else {
                 alert('Rat : hahahhha')
@@ -49,9 +49,9 @@
             }
         }
     }
-let rat = new Rat('Jerry',5,40,true);
-    let cat = new Cat('Tom',10,60);
- cat.catchRat(rat);
+let accc = new Rat('Jerry',5,40,true);
+    let cat = new Cat('Tom',10,41);
+ cat.catchRat(accc);
 cat.speak() ;
 </script>
 </body>
